--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "prettify": "pnpm prettier . --write & next lint --fix"
+    "lint": "next lint",
+    "prettify": "pnpm prettier . --write"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
@@ -14,6 +15,7 @@
     "eslint-config-prettier": "^9.1.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-intl": "^3.25.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "19.0.0-rc-66855b96-20241106",
