--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettify": "pnpm prettier . --write"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
