--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
